--- a/style.css
+++ b/style.css
@@ -1,16 +1,55 @@
-*{
-
-margin:0;
-padding:0;
-box-sizing: border-box;
-
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
+body {
+  font-family: "Roboto", sans-serif;
+}
 
-font-family: 'Roboto', sans-serif;
+.nav_bar {
+  display: flex;
+  flex-direction: row;
+}
+.logo_image {
+  width: 150px;
+  padding: 9px;
+}
+.logo_title {
+  font-size: 50px;
+  font-weight: bold;
+  margin-left: 220px;
+  text-shadow: 2px 2px red;
+}
 
+.nav_list {
+  display: flex;
+  justify-content: right;
+  justify-content: space-between;
+  list-style: none;
+  padding: 20px 20px;
+  margin: 20px 20px;
+  background: fixed;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  border: 1px solid violet;
+  box-shadow: 0px 0px 10px violet;
+}
 
+.nav_list li {
+  background-color: aqua;
+  border: 2px solid blue;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px yellowgreen;
+  padding: 10px;
+}
+
+.nav_list li:hover {
+  background-color: orangered;
+}
+
+.nav_bar a {
+    text-decoration: none;
 
 }
